# ddong

./: .gitignore  0.avi  README.md  ddong_eval_data.jsonl  main.py  pyproject.toml  requirements.txt
code/: thisisall.py
data/: metadata.csv
scripts/: black_vs_noise.py  center_vs_random.py  color_vs_wb.py  combine.py  data.py  direction.py  noise_levels.py  noised.py  randomize.py  test.py  toframes.py
src/: __init__.py  config.py  convert.py  execute.py  noise.py  run.py  transform.py  transition.py  utils.py  video.py
src/data/: __main__.py  generator.py  load.py  noise.py  upload.py
ubai/: make_data.sh  make_data_blacked.sh  process_data.sh  process_data_light.sh  run_eval.sh  test.sh  upload_data.sh
